# rat_game

./: .gitignore  .gitmodules  3d.lua  CMakeLists.txt  DEMO_STORY.md  DESIGN.md  README.md  TODO.txt  blood_apply_local_forces.glsl  blood_build_memory_mapping.glsl  blood_compute_sdf.glsl  blood_copy.hlsl  blood_debug_draw_density.glsl  blood_debug_draw_particles.glsl  blood_debug_draw_sdf.glsl  blood_debug_draw_spatial_hash.glsl  blood_debug_run.glsl  blood_density_compute_derivative.glsl  blood_density_kernel_draw.glsl  blood_density_kernel_init.glsl  blood_init_density_kernel.glsl  blood_main.lua  blood_preprocess_hitbox.glsl  blood_render_density_kernel.glsl  blood_render_sdf.glsl  blood_sort_accumulate_local_counts.glsl  blood_sort_compute_prefix_sum.glsl  blood_sort_merge_local_counts.glsl  blood_sort_particles.glsl  blood_sort_scatter_particles.glsl  blood_step.glsl  blood_step_simulation.glsl  blood_update_cell_hash.glsl  blood_update_particle_cell_id.glsl  blood_update_particle_density.glsl  conf.lua  cube.lua  debug_savefile.lua  essay.md  font_sdf.glsl  (+67 more)
art/: orbs.lua  orbs.pxo  test_animation.lua
assets/: favicon.hxl  rat_game.hxp  sprite_config_template.lua  temp.txt
backgrounds/: background.lua  background_implementation.lua  background_shader_only.lua  brusselator.lua  brusselator_compute.glsl  brusselator_initialize.glsl  brusselator_render.glsl  bubblegum.glsl  celebration.glsl  complex_plot.glsl  complex_tiling.glsl  confusion.glsl  dot_matrix.glsl  fireworks.glsl  gradient_derivative.glsl  mesh_ring.lua  midi_tiling.lua  overlapping_dots.glsl  overlapping_dots.lua  overlapping_dots_render.glsl  overlapping_dots_update.glsl  parallel_lines.glsl  sdf_aura.lua  sdf_aura_compute_sdf.glsl  sdf_aura_init_particle_texture.glsl  sdf_aura_render_metaballs.glsl  sdf_aura_render_sdf.glsl  sdf_aura_render_wall.glsl  sdf_aura_step.glsl  squiggly_dance.glsl  temp_triangle_tiling.lua  vector_field.lua
battle/: action.lua  action_list_item.lua  action_selection_menu.lua  action_tooltip.lua  animation.lua  animation_queue.lua  backdrop.lua  background.lua  battle.lua  battle_ai.lua  battle_animation.lua  battle_background.lua  battle_config.lua  battle_consumable.lua  battle_entity.lua  battle_entity_interface.lua  battle_event.lua  battle_interface.lua  battle_log.lua  battle_scene.lua  battle_simulation.lua  battle_sprite.lua  battle_state.lua  battle_tooltip.lua  battle_transition.lua  battle_ui.lua  config_atlas.lua  consumable.lua  consumable_bar.lua  consumable_bar_element.lua  consumable_config.lua  consumable_interface.lua  enemy_ai.lua  enemy_sprite.lua  entity.lua  entity_config.lua  entity_info.lua  entity_interface.lua  entity_portrait.lua  entity_proxy.lua  (+87 more)
common/: animation.lua  animation_queue.lua  animation_timer.lua  array.lua  aspect_layout.lua  audio.lua  audio_filter.lua  audio_playback.lua  audio_processor.lua  audio_visualizer.lua  benchmark.lua  bezier_curve.lua  bin_layout.lua  blood_compute_sdf.glsl  blood_construct_particle_occupations.glsl  blood_construct_spatial_hash.glsl  blood_density_compute_derivative.glsl  blood_density_kernel_draw.glsl  blood_initialize_spatial_hash.glsl  blood_render.glsl  blood_sort.glsl  blood_sort_temp.glsl  blood_spatial_hash_step.glsl  blood_velocity_step.glsl  bspline.lua  (+174 more)
physics/box2d_extension/: CMakeLists.txt  box2d_extension.c  box2d_extension.h  physics.hpp  ~CMakeLists.txt
(+1345 files in other folders)
